v0.6.6 (2011-xx-xx)
  * Switched to Redis 2.2 as the default server profile (there are no changes 
    that would break compatibility with previous releases).

  * Added a VERSION constant to Predis\Client.

  * Some performance improvements for multibulk replies (parsing them is about 
    16% faster than the previous version).

  * Added support for connecting to Redis using UNIX domain sockets (ISSUE #25).

  * The "read_write_timeout" connection parameter can now be set to 0 or false 
    to disable read and write timeouts on connections. The old behaviour of -1 
    is still intact.

  * ZUNIONSTORE and ZINTERSTORE can accept an array to specify a list of the 
    source keys to be used to populate the destination key.

  * MGET, SINTER, SUNION and SDIFF can accept an array to specify the list of 
    keys. SINTERSTORE, SUNIONSTORE and SDIFFSTORE can also accept an array to 
    specify the list of source keys.

  * SUBSCRIBE and PSUBSCRIBE can accept a list of channels for subscription.

  * FIX: some client-side clean-ups for MULTI/EXEC were handled incorrectly in 
    a couple of corner cases.

v0.6.5 (2011-02-12)
  * FIX: due to an untested internal change introduced in v0.6.4, a wrong 
    handling of bulk reads of zero-length values was producing protocol 
    desynchronization errors (ISSUE #20).

v0.6.4 (2011-02-12)
  * Various performance improvements (15% ~ 25%) especially when dealing with 
    long multibulk replies or when using clustered connections.

  * Added the "on_retry" option to Predis\MultiExecBlock that can be used to 
    specify an external callback (or any callable object) that gets invoked 
    whenever a transaction is aborted by the server.

  * Added inline (p)subscribtion via options when initializing an instance of 
    Predis\PubSubContext.

v0.6.3 (2011-01-01)
  * New commands available in the Redis v2.2 profile (dev):
      - Strings: SETRANGE, GETRANGE, SETBIT, GETBIT
      - Lists  : BRPOPLPUSH
